--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "axios": "^1.4.0",
+    "editor.md": "^1.5.0",
     "element-plus": "^2.3.7",
+    "md-editor-v3": "^4.2.0",
     "pinia": "^2.0.34",
     "vue": "^3.2.47",
     "vue-router": "^4.2.2"
