--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "editor.md": "^1.5.0",
     "element-plus": "^2.3.7",
     "md-editor-v3": "^4.2.0",
+    "nprogress": "^0.2.0",
     "pinia": "^2.0.34",
     "vue": "^3.2.47",
     "vue-router": "^4.2.2"
