--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 NODE_ENV = 'production'
-VITE_APP_TITLE = '运营平台 - production'
-VITE_APP_BASE_API = '/prod-api'
+VITE_APP_TITLE = 'production'
+VITE_APP_BASE_API = 'http://blog.helloworld.center/api'
