--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "zero_admin",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "main": "main.js",
   "scripts": {
     "dev": "vite --open",
     "build": "vue-tsc && vite build",
@@ -14,12 +14,14 @@
     "lint:style": "stylelint src/**/*.{css,scss,vue} --cache --fix",
     "prepare": "husky install",
     "build:dev": "vue-tsc && vite build --mode development",
-    "build:pro": "vue-tsc && vite build --mode production"
+    "build:pro": "vue-tsc && vite build --mode production",
+    "start": "nodemon --exec electron . --watch ./ --ext .js,.html,.css,.vue"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "axios": "^1.4.0",
     "editor.md": "^1.5.0",
+    "electron": "^19.0.8",
     "element-plus": "^2.3.7",
     "md-editor-v3": "^4.2.0",
     "nprogress": "^0.2.0",
@@ -35,6 +37,7 @@
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@typescript-eslint/parser": "^5.60.0",
     "@vitejs/plugin-vue": "^4.1.0",
+    "electron": "^19.0.8",
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
