--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,3 @@
-# 变量必须以 VITE_ 为前缀才能暴露给外部读取
-NODE_ENV = 'development'
-VITE_APP_TITLE = '运营平台 - development'
-VITE_APP_BASE_API = 'http://127.0.0.1:9000/api'
+NODE_ENV = 'production'
+VITE_APP_TITLE = 'production'
+VITE_APP_BASE_API = 'http://blog.helloworld.center/api'
