--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nprogress": "^0.2.0",
     "pinia": "^2.0.34",
     "qs": "^6.11.2",
+    "vditor": "^3.9.8",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
