--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
-NODE_ENV = 'production'
-VITE_APP_TITLE = 'production'
-VITE_APP_BASE_API = 'http://blog.helloworld.center/api'
+NODE_ENV = 'development'
+VITE_APP_TITLE = 'development'
+VITE_APP_BASE_API = 'http://127.0.0.1:10001/api'
