1、类别筛选添加sessionStorage持久化2、文档详情添加返回和返回顶部

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "md-editor-v3": "^4.2.0",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.34",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "qs": "^6.11.2",
     "vditor": "^3.9.8",
     "vue": "^3.2.47",
