--- a/package.json
+++ b/package.json
@@ -22,15 +22,17 @@
     "axios": "^1.4.0",
     "editor.md": "^1.5.0",
     "electron": "^19.0.8",
-    "element-plus": "^2.3.7",
+    "element-plus": "latest",
     "md-editor-v3": "^4.2.0",
     "nprogress": "^0.2.0",
-    "pinia": "^2.0.34",
-    "pinia-plugin-persistedstate": "^4.2.0",
+    "pinia": "^2.3.1",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "qs": "^6.11.2",
+    "typescript": "^5.8.3",
     "vditor": "^3.9.8",
-    "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue": "^3.5.13",
+    "vue-router": "^4.1.6",
+    "vue-tsc": "^2.0.29"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.22.5",
